// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RepliesWithParent > Snapshots > should match snapshot for empty state 1`] = `
<div>
  <div
    data-testid="replies-empty"
  >
    No replies yet
  </div>
</div>
`;

exports[`RepliesWithParent > Snapshots > should match snapshot for error state 1`] = `
<div>
  <div
    data-testid="timeline-initial-error"
  >
    Error: 
    Network error
  </div>
</div>
`;

exports[`RepliesWithParent > Snapshots > should match snapshot for loading state 1`] = `
<div>
  <div
    data-testid="timeline-loading"
  >
    Loading...
  </div>
</div>
`;

exports[`RepliesWithParent > Snapshots > should match snapshot with replies (no parents) 1`] = `
<div>
  <div
    data-testid="container"
  >
    <div
      class="space-y-4"
      data-testid="container"
      role="feed"
    >
      <div
        aria-posinset="1"
        aria-setsize="2"
        class="rounded-md outline-none focus-visible:ring-2 focus-visible:ring-ring"
        data-testid="container"
        role="article"
        tabindex="0"
      >
        <div
          class="flex flex-col"
          data-testid="container"
        >
          <div
            class="rounded-sm outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-post-list-card="true"
            data-testid="container"
            tabindex="0"
          >
            <div
              data-is-reply="true"
              data-testid="post-author1:reply1"
            />
          </div>
        </div>
      </div>
      <div
        aria-posinset="2"
        aria-setsize="2"
        class="rounded-md outline-none focus-visible:ring-2 focus-visible:ring-ring"
        data-testid="container"
        role="article"
        tabindex="0"
      >
        <div
          class="flex flex-col"
          data-testid="container"
        >
          <div
            class="rounded-sm outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-post-list-card="true"
            data-testid="container"
            tabindex="0"
          >
            <div
              data-is-reply="true"
              data-testid="post-author2:reply2"
            />
          </div>
        </div>
      </div>
      <div
        class="h-[20px]"
        data-testid="container"
      />
    </div>
  </div>
</div>
`;

exports[`RepliesWithParent > Snapshots > should match snapshot with replies and parents 1`] = `
<div>
  <div
    data-testid="container"
  >
    <div
      class="space-y-4"
      data-testid="container"
      role="feed"
    >
      <div
        aria-posinset="1"
        aria-setsize="2"
        class="rounded-md outline-none focus-visible:ring-2 focus-visible:ring-ring"
        data-testid="container"
        role="article"
        tabindex="0"
      >
        <div
          class="flex flex-col"
          data-testid="container"
        >
          <div
            class="rounded-sm outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-testid="container"
            role="article"
            tabindex="0"
          >
            <div
              data-is-reply="false"
              data-testid="post-author3:parent1"
            />
          </div>
          <div
            class="pl-3"
            data-testid="container"
          >
            <div
              data-testid="post-thread-spacer"
            />
          </div>
          <div
            class="rounded-sm outline-none focus-visible:ring-2 focus-visible:ring-ring pl-3"
            data-post-list-card="true"
            data-testid="container"
            tabindex="0"
          >
            <div
              data-is-reply="true"
              data-testid="post-author1:reply1"
            />
          </div>
        </div>
      </div>
      <div
        aria-posinset="2"
        aria-setsize="2"
        class="rounded-md outline-none focus-visible:ring-2 focus-visible:ring-ring"
        data-testid="container"
        role="article"
        tabindex="0"
      >
        <div
          class="flex flex-col"
          data-testid="container"
        >
          <div
            class="rounded-sm outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-testid="container"
            role="article"
            tabindex="0"
          >
            <div
              data-is-reply="false"
              data-testid="post-author4:parent2"
            />
          </div>
          <div
            class="pl-3"
            data-testid="container"
          >
            <div
              data-testid="post-thread-spacer"
            />
          </div>
          <div
            class="rounded-sm outline-none focus-visible:ring-2 focus-visible:ring-ring pl-3"
            data-post-list-card="true"
            data-testid="container"
            tabindex="0"
          >
            <div
              data-is-reply="true"
              data-testid="post-author2:reply2"
            />
          </div>
        </div>
      </div>
      <div
        class="h-[20px]"
        data-testid="container"
      />
    </div>
  </div>
</div>
`;
